--- a/config/yugabyte/regression_pipelines/join_workloads/yugabyte/JOING11_join_groupby_orderby_multiple_loops.yaml
+++ b/config/yugabyte/regression_pipelines/join_workloads/yugabyte/JOING11_join_groupby_orderby_multiple_loops.yaml
@@ -50,7 +50,7 @@ microbenchmark:
                     - name: col_bigint_card1_
                       count: 1
                       util: RandomInt
-                      params: [ 1000001, 1001000 ]
+                      params: [ 1000001, 1100000 ]
                     - name: col_bigint_card2_
                       count: 1
                       util: RandomInt
@@ -179,7 +179,7 @@ microbenchmark:
                     -   name: join_on_pk_3tbl
                         weight: 100
                         queries:
-                            -   query: select a.col_bigint_id_1, b.col_bigint_id_1,b.col_bigint_card1_1,b.col_bigint_card2_1 from pkeyBigint1M1_1 as a,pkeyBigint1M1_4 as b where b.col_bigint_card1_1 IN (select distinct(col_bigint_card1_1) from pkeyBigint1M_1);
+                            -   query: select count(*) from pkeyBigint1M1_1 as a,pkeyBigint1M1_4 as b where b.col_bigint_card1_1 IN (select distinct(col_bigint_card1_1) from pkeyBigint1M1_1 limit 1);
 
             -   workload: JOING11_7_join_on_range_2tbls_subquery
                 customTags: schematype=regular,partition=hash,pkey=hash,cardinality=single,projectition=indexed,queryshape=join,joinon=pkey
@@ -187,4 +187,4 @@ microbenchmark:
                     -   name: join_on_pk_3tbl
                         weight: 100
                         queries:
-                            -   query: select a.col_bigint_id_1, b.col_bigint_id_1,b.col_bigint_card1_1,b.col_bigint_card2_1 from pkeyBigint1Mr_1 as a,pkeyBigint1Mr_3 as b where b.col_bigint_card1_1 IN (select distinct(col_bigint_card1_1) from pkeyBigint1M_1);
+                            -   query: select count(*) from pkeyBigint1Mr_1 as a,pkeyBigint1Mr_3 as b where b.col_bigint_card1_1 IN (select distinct(col_bigint_card1_1) from pkeyBigint1M1_1 limit 1);
