--- a/config/yugabyte/regression_pipelines/retention_impact/yugabyte/retention_impact.yaml
+++ b/config/yugabyte/regression_pipelines/retention_impact/yugabyte/retention_impact.yaml
@@ -101,7 +101,26 @@ microbenchmark:
                       params: [ 50, 50 ]
 
         executeRules:
-            - workload: NetG1_query1
+            - workload: Retention_pre_workload_run1
+              time_secs: 300
+              run:
+                  - name: NetG1_1_select_query
+                    weight: 100
+                    queries:
+                        - query: select work_id_1,owner_1,state_1,sequence_id_1 from nets_1 where db_user_id_1 = ? and shard_id_1 = ANY(ARRAY[?,?,?,?])
+                          bindings:
+                            - util: HashedRandomString
+                              params: [ 1, 500, 10]
+                            - util: RandomInt
+                              params: [ 1, 20 ]
+                            - util: RandomInt
+                              params: [ 21, 30 ]
+                            - util: RandomInt
+                              params: [ 31, 40 ]
+                            - util: RandomInt
+                              params: [ 41, 50 ]
+            - workload: Retention_mixed_workload_run2
+              time_secs: 3600
               run:
                   - name: NetG1_1_update_query
                     weight: 50
@@ -123,6 +142,24 @@ microbenchmark:
                               params: [ 1, 20 ]
                   - name: NetG1_3_scan_query_pointselect
                     weight: 40
+                    queries:
+                        - query: select work_id_1,owner_1,state_1,sequence_id_1 from nets_1 where db_user_id_1 = ? and shard_id_1 = ANY(ARRAY[?,?,?,?])
+                          bindings:
+                            - util: HashedRandomString
+                              params: [ 1, 500, 10]
+                            - util: RandomInt
+                              params: [ 1, 20 ]
+                            - util: RandomInt
+                              params: [ 21, 30 ]
+                            - util: RandomInt
+                              params: [ 31, 40 ]
+                            - util: RandomInt
+                              params: [ 41, 50 ]
+            - workload: Retention_post_workload_run3
+              time_secs: 300
+              run:
+                  - name: NetG1_1_select_query
+                    weight: 100
                     queries:
                         - query: select work_id_1,owner_1,state_1,sequence_id_1 from nets_1 where db_user_id_1 = ? and shard_id_1 = ANY(ARRAY[?,?,?,?])
                           bindings:
