--- a/config/yugabyte/regression_pipelines/miscellaneous/yugabyte/MG2_multi_statment_transaction.yaml
+++ b/config/yugabyte/regression_pipelines/miscellaneous/yugabyte/MG2_multi_statment_transaction.yaml
@@ -92,7 +92,7 @@ microbenchmark:
                         count: 1
                         util: PrimaryIntGen
                         params: [ 1, 1000000 ]
-                    -   name: bal_
+                    -   name: delta_
                         count: 1
                         util: RandomNoWithDecimalPoints
                         params: [ 1, 1000000, 2 ]
