--- a/config/yugabyte/regression_pipelines/miscellaneous/yugabyte/MG2_multi_statment_transaction.yaml
+++ b/config/yugabyte/regression_pipelines/miscellaneous/yugabyte/MG2_multi_statment_transaction.yaml
@@ -119,14 +119,14 @@ microbenchmark:
                           bindings:
                               -   util: PrimaryIntGen
                                   params: [ 1, 1000000 ]
-                        - query: UPDATE accounts_1 SET bal_1 = ? WHERE account_id_1 = ? and bal_1 = ?
+                        - query: UPDATE accounts_1 SET bal_1 = ? WHERE account_id_1 = ? and user_id_1 = ?
                           bindings:
                               -   util: RandomNoWithDecimalPoints
                                   params: [ 1000000, 10000000, 2 ]
                               -   util: PrimaryIntGen
                                   params: [ 1, 1000000 ]
-                              -   util: RandomNoWithDecimalPoints
-                                  params: [ 1000000, 10000000, 2 ]
+                              -   util: PrimaryIntGen
+                                  params: [ 1, 1000000 ]
                         - query: UPDATE users_1 SET bal_1 = bal_1 + ? WHERE user_id_1 = ?
                           bindings:
                               -   util: RandomInt
