--- a/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW3_select_for_update.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW3_select_for_update.yaml
@@ -22,10 +22,10 @@ microbenchmark:
         create:
             - DROP TABLE IF EXISTS accounts_1;
             - CREATE TABLE IF NOT EXISTS accounts_1(account_id_1 bigint, user_id_1 bigint, addr_1 varchar(50), bal_1 float(2),PRIMARY KEY(account_id_1));
-            - CREATE UNIQUE INDEX user_accounts ON accounts_1( user_id_1, account_id_1);
+            - CREATE UNIQUE INDEX user_accounts_1 ON accounts_1( user_id_1, account_id_1);
             - DROP TABLE IF EXISTS accounts_2;
             - CREATE TABLE IF NOT EXISTS accounts_2(account_id_1 bigint, user_id_1 bigint, addr_1 varchar(50), bal_1 float(2),PRIMARY KEY(account_id_1));
-            - CREATE UNIQUE INDEX user_accounts ON accounts_2( user_id_1, account_id_1);
+            - CREATE UNIQUE INDEX user_accounts_2 ON accounts_2( user_id_1, account_id_1);
 
         cleanup:
             - DROP TABLE IF EXISTS accounts_1;
