--- a/config/plugin.xml
+++ b/config/plugin.xml
@@ -18,4 +18,5 @@
     <plugin name="smallbank">com.oltpbenchmark.benchmarks.smallbank.SmallBankBenchmark</plugin>
     <plugin name="hyadapt">com.oltpbenchmark.benchmarks.hyadapt.HYADAPTBenchmark</plugin>
     <plugin name="otmetrics">com.oltpbenchmark.benchmarks.otmetrics.OTMetricsBenchmark</plugin>
+    <plugin name="perf-dataloader">com.oltpbenchmark.benchmarks.dataloader.DataGenerator</plugin>
 </plugins>
