--- a/config/yugabyte/sample_dataloader_config.yaml
+++ b/config/yugabyte/sample_dataloader_config.yaml
@@ -4,5 +4,5 @@ url: jdbc:yugabytedb://172.151.25.127:5433/yugabyte?sslmode=require&ApplicationN
 username: yugabyte
 password: Password@321
 
-tablename: film
+tablename: {{tableName}}
 rows: {{rows}}
