--- a/config/yugabyte/sample_dataloader_config.yaml
+++ b/config/yugabyte/sample_dataloader_config.yaml
@@ -1,6 +1,6 @@
 type: YUGABYTE
 driver: com.yugabyte.Driver
-url: jdbc:yugabytedb://172.151.25.127:5433/yugabyte?sslmode=require&ApplicationName=featurebench&reWriteBatchedInserts=true
+url: jdbc:yugabytedb://172.151.25.127:5433/yugabyte?sslmode=require&reWriteBatchedInserts=true
 username: yugabyte
 password: Password@321
 
