--- a/config/yugabyte/regression_pipelines/write_workloads/yb_colocated/updateG4_unmodified_set_clause.yaml
+++ b/config/yugabyte/regression_pipelines/write_workloads/yb_colocated/updateG4_unmodified_set_clause.yaml
@@ -6,7 +6,7 @@ password: {{password}}
 createdb: drop database if exists yb_colocated; create database yb_colocated with colocated=true
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
-loaderthreads: 1
+loaderThreads: 1
 terminals: 1
 collect_pg_stat_statements: true
 use_dist_in_explain : true
