added new utility function

--- a/src/main/resources/benchmarks/perf-dataloader/datatype-mapping.properties
+++ b/src/main/resources/benchmarks/perf-dataloader/datatype-mapping.properties
@@ -28,7 +28,7 @@ uuid=RandomUUID:0:
 numeric=RandomNumber:2:1,rows
 
 # arraySize, minLength,maxLength
-array=RandomTextArrayGen:3:1,1000,1000
+array=RandomTextArrayGen:3:1,20,20
 
 timestampwithtimezone=RandomTimestampWithTimeZone:1:rows
 timestampwithouttimezone=RandomTimestampWithoutTimeZone:1:rows
@@ -36,6 +36,7 @@ smallint=RandomInt:2:1,100
 tsvector=RandomAString:2:1,1000
 character=RandomAString:2:1,max
 
+bytea=RandomBytea:2:1,100
 #character(20)
 #mpaa_rating
 #TEXT=
