--- a/config/yugabyte/regression_pipelines/write_workloads/yugabyte/updateG4_unmodified_set_clause.yaml
+++ b/config/yugabyte/regression_pipelines/write_workloads/yugabyte/updateG4_unmodified_set_clause.yaml
@@ -174,6 +174,8 @@ microbenchmark:
                               params: [1, 100]
                             - util: PrimaryStringGen
                               params: [1, 500]
+                            - util: RandomAString
+                              params: [100, 100]
 
             - workload: UG4_4_update_constraint_tbl1
               run:
