--- a/config/yugabyte/regression_pipelines/write_workloads/yugabyte/updateG4_unmodified_set_clause.yaml
+++ b/config/yugabyte/regression_pipelines/write_workloads/yugabyte/updateG4_unmodified_set_clause.yaml
@@ -112,7 +112,7 @@ microbenchmark:
                   - name: update_10_cols
                     weight: 100
                     queries:
-                        - query: INSERT INTO pkeyBigint1M_1 (col_bigint_card1_1,col_bigint_card2_1,col_bigint_card3_1,col_bigint_id_1,col_bigint_id_2,col_bigint_id_3,col_float2_1,col_float2_2,col_float5_1,col_float5_2,col_boolean_1,col_varchar10_id_1,col_varchar100_id_1,col_varchar100_id_2,col_varchar500_id_1) VALUES (1000000,?,?,?,?,?,?,?,?,?,?,?,?,?,?) ON CONFLICT (col_bigint_id_1) DO UPDATE SET col_varchar100_id_1 = 'updated_val' RETURNING *
+                        - query: INSERT INTO pkeyBigint1M_1 (col_bigint_card1_1,col_bigint_card2_1,col_bigint_card3_1,col_bigint_id_1,col_bigint_id_2,col_bigint_id_3,col_float2_1,col_float2_2,col_float5_1,col_float5_2,col_boolean_1,col_varchar10_id_1,col_varchar100_id_1,col_varchar100_id_2,col_varchar500_id_1) VALUES (1000000,?,?,?,?,?,?,?,?,?,?,?,?,?,?) ON CONFLICT (col_bigint_id_1) DO UPDATE SET col_varchar100_id_1 = 'updated_val'
                           bindings:
                             - util: RandomInt
                               params: [ 1000001,1001000 ]
