--- a/config/yugabyte/regression_pipelines/orderby_workloads/yugabyte/ORDG8_orderby_backwardscan_post_updates.yaml
+++ b/config/yugabyte/regression_pipelines/orderby_workloads/yugabyte/ORDG8_orderby_backwardscan_post_updates.yaml
@@ -36,8 +36,9 @@ microbenchmark:
             - CREATE INDEX ON Indexed1M_1(col_bigint_id_2);
             - CREATE INDEX ON Indexed1M_1(col_bigint_id_3 ASC);
             - DROP TABLE IF EXISTS indexedBigint1M_1;
-            - CREATE TABLE indexedBigint1M_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint,col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_bigint_4 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1 ASC));
+            - CREATE TABLE indexedBigint1M_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint,col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1 ASC));
             - CREATE INDEX ON indexedBigint1M_1(col_bigint_id_2 DESC);
+            - CREATE INDEX ON indexedBigint1M_1(col_bigint_id_3);
             - DROP TABLE IF EXISTS Indexed1M_range_1;
             - CREATE TABLE Indexed1M_range_1(col_bigint_id_1 bigint, col_bigint_id_2 bigint, col_bigint_id_3 bigint, col_bigint_1 bigint, col_bigint_2 bigint, col_bigint_3 bigint, col_float2_1 float(2), col_float2_2 float(2), col_float5_1 float(5), col_float5_2 float(5), col_boolean_1 boolean, col_varchar10_id_1 varchar(10), col_varchar100_id_1 varchar(100), col_varchar100_id_2 varchar(100), col_varchar500_id_1 varchar(500), PRIMARY KEY(col_bigint_id_1 ASC));
             - CREATE INDEX ON Indexed1M_range_1(col_bigint_id_2 ASC);
@@ -94,11 +95,11 @@ microbenchmark:
                 rows: 1000000
                 columns:
                     -   name: col_bigint_id_
-                        count: 2
+                        count: 3
                         util: PrimaryIntGen
                         params: [ 1, 1000000 ]
                     -   name: col_bigint_
-                        count: 4
+                        count: 3
                         util: RandomNumber
                         params: [ 1, 1000000 ]
                     -   name: col_float2_
@@ -163,13 +164,14 @@ microbenchmark:
 
         executeRules:
 
-            - workload: ORDG7_ordby_bckwrd_ind_scan_pkey_filter
+            - workload: ORDG8_1_ordby_bckwrd_ind_scan_pkey_filter
               customTags: customer=0,schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projection=hashpkey,filtercount=one,filteron=hashpkey,filtertype=comparision,queryshape=orderby,orderbyon=hashpkeydesc
               run:
                   - name: ordby_bckwrd_ind_scan_pkey_filter
                     weight: 100
                     queries:
-                        - query: select col_bigint_id_1 from Indexed1M_1 where col_bigint_card1_1=1000000 and col_bigint_card2_1<1000010 order by col_bigint_card2_1 DESC
+                        - query: select col_bigint_id_1,col_bigint_id_2,col_bigint_card2_1,col_bigint_card3_1 from Indexed1M_1 where col_bigint_card1_1=1000000 and col_bigint_card2_1<1000100 order by col_bigint_card2_1 DESC
+
             -   workload: ORDG8_2_ordby_bigint_indexed_column_desc
                 customTags: customer=2,schematype=regular,partition=range,skey=desc,columndatatype=bigint,cardinality=single,projection=indexed,queryshape=orderby,orderbyon=rangeskey
                 run:
@@ -186,16 +188,54 @@ microbenchmark:
                     queries:
                         - query: select col_bigint_id_1 from Indexed1M_range_1 where col_bigint_id_1>1 order by col_bigint_id_1 DESC
 
-
-
-
-            - workload: ORDG7_ordby_bckwrd_ind_scan_pkey_filter
+            - workload: ORDG8_1_perform_update_ordby_bckwrd_ind_scan_pkey_filter
+              skipReport: true
               customTags: customer=0,schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projection=hashpkey,filtercount=one,filteron=hashpkey,filtertype=comparision,queryshape=orderby,orderbyon=hashpkeydesc
               run:
                   - name: ordby_bckwrd_ind_scan_pkey_filter
                     weight: 100
                     queries:
-                        - query: select col_bigint_id_1 from Indexed1M_1 where col_bigint_card1_1=1000000 and col_bigint_card2_1<1000010 order by col_bigint_card2_1 DESC
+                        - query: update Indexed1M_1 set col_bigint_card3_1=? where col_bigint_card3_1=?
+                          bindings:
+                              -   util: RandomNumber
+                                  params: [ 1000001, 1010001 ]
+                              -   util: RandomNumber
+                                  params: [ 1000001, 1010001 ]
+
+            -   workload: ORDG8_2_perform_update_ordby_bigint_indexed_column_desc
+                skipReport: true
+                customTags: customer=2,schematype=regular,partition=range,skey=desc,columndatatype=bigint,cardinality=single,projection=indexed,queryshape=orderby,orderbyon=rangeskey
+                run:
+                    -   name: ordby_bigint_indexed_column_desc
+                        weight: 100
+                        queries:
+                            -   query: update indexedBigint1M_1 set col_bigint_id_3=? where col_bigint_id_3=?
+                                bindings:
+                                  -   util: RandomNumber
+                                      params: [ 1, 1000000 ]
+                                  -   util: RandomNumber
+                                      params: [ 1, 1000000 ]
+
+            - workload: ORDG8_3_perform_update_ordby_bigint_pkey_column_desc
+              customTags: schematype=colocated,partition=hash,cardinality=single,projection=rangepkey,filtercount=one,filteron=rangepkey,filtertype=comparision,queryshape=orderby,orderbyon=rangepkeydesc
+              run:
+                  - name: yb_ordby_bigint_non_indexed_column
+                    weight: 100
+                    queries:
+                        - query: update Indexed1M_range_1 set col_bigint_id_2 = ? where col_bigint_id_2 = ?
+                          bindings:
+                              -   util: RandomNumber
+                                  params: [ 1, 1000000 ]
+                              -   util: RandomNumber
+                                  params: [ 1, 1000000 ]
+
+            - workload: ORDG8_1_post_update_ordby_bckwrd_ind_scan_pkey_filter
+              customTags: customer=0,schematype=regular,partition=hash,pkey=composite,cardinality=multiple,projection=hashpkey,filtercount=one,filteron=hashpkey,filtertype=comparision,queryshape=orderby,orderbyon=hashpkeydesc
+              run:
+                  - name: ordby_bckwrd_ind_scan_pkey_filter
+                    weight: 100
+                    queries:
+                        - query: select col_bigint_id_1,col_bigint_id_2,col_bigint_card2_1,col_bigint_card3_1 from Indexed1M_1 where col_bigint_card1_1=1000000 and col_bigint_card2_1<1000100 order by col_bigint_car2_1 DESC
 
             -   workload: ORDG8_2_post_update_ordby_bigint_indexed_column_desc
                 customTags: customer=2,schematype=regular,partition=range,skey=desc,columndatatype=bigint,cardinality=single,projection=indexed,queryshape=orderby,orderbyon=rangeskey
