--- a/config/yugabyte/regression_pipelines/write_workloads/yugabyte/updateG4_unmodified_set_clause.yaml
+++ b/config/yugabyte/regression_pipelines/write_workloads/yugabyte/updateG4_unmodified_set_clause.yaml
@@ -107,42 +107,6 @@ microbenchmark:
 
         executeRules:
 
-            - workload: UG4_3_no_update_to_constraint_on_conflict_tbl1
-              run:
-                  - name: update_10_cols
-                    weight: 100
-                    queries:
-                        - query: INSERT INTO pkeyBigint1M_1 (col_bigint_card1_1,col_bigint_card2_1,col_bigint_card3_1,col_bigint_id_1,col_bigint_id_2,col_bigint_id_3,col_float2_1,col_float2_2,col_float5_1,col_float5_2,col_boolean_1,col_varchar10_id_1,col_varchar100_id_1,col_varchar100_id_2,col_varchar500_id_1) VALUES (1000000,?,?,?,?,?,?,?,?,?,?,?,?,?,?) ON CONFLICT (col_bigint_id_1) DO UPDATE SET col_varchar100_id_1 = 'updated_val' RETURNING col_bigint_id_1,col_varchar100_id_1
-                          bindings:
-                            - util: RandomInt
-                              params: [ 1000001,1001000 ]
-                            - util: RandomInt
-                              params: [ 1000001,1010000]
-                            - util: PrimaryIntGen
-                              params: [ 1, 1000000 ]
-                            - util: PrimaryIntGen
-                              params: [ 1, 1000000 ]
-                            - util: PrimaryIntGen
-                              params: [ 1, 1000000 ]
-                            - util: RandomNoWithDecimalPoints
-                              params: [ 1, 1000000, 2 ]
-                            - util: RandomNoWithDecimalPoints
-                              params: [ 1, 1000000, 2 ]
-                            - util: RandomNoWithDecimalPoints
-                              params: [ 1, 1000000, 5 ]
-                            - util: RandomNoWithDecimalPoints
-                              params: [ 1, 1000000, 5 ]
-                            - util: RandomBoolean
-                            - util: PrimaryStringGen
-                              params: [1, 10]
-                            - util: PrimaryStringGen
-                              params: [1, 100]
-                            - util: PrimaryStringGen
-                              params: [1, 100]
-                            - util: PrimaryStringGen
-                              params: [1, 500]
-
-
             - workload: UG4_1_no_update_to_constraint_tbl1
               run:
                   - name: update_10_cols
@@ -177,7 +141,40 @@ microbenchmark:
                             - util: PrimaryIntGen
                               params: [ 1, 1000000 ]
 
-
+            - workload: UG4_3_no_update_to_constraint_on_conflict_tbl1
+              run:
+                  - name: update_10_cols
+                    weight: 100
+                    queries:
+                        - query: INSERT INTO pkeyBigint1M_1 (col_bigint_card1_1,col_bigint_card2_1,col_bigint_card3_1,col_bigint_id_1,col_bigint_id_2,col_bigint_id_3,col_float2_1,col_float2_2,col_float5_1,col_float5_2,col_boolean_1,col_varchar10_id_1,col_varchar100_id_1,col_varchar100_id_2,col_varchar500_id_1) VALUES (1000000,?,?,?,?,?,?,?,?,?,?,?,?,?,?) ON CONFLICT (col_bigint_id_1) DO UPDATE SET col_varchar100_id_1 = 'updated_val' RETURNING *
+                          bindings:
+                            - util: RandomInt
+                              params: [ 1000001,1001000 ]
+                            - util: RandomInt
+                              params: [ 1000001,1010000]
+                            - util: PrimaryIntGen
+                              params: [ 1, 1000000 ]
+                            - util: PrimaryIntGen
+                              params: [ 1, 1000000 ]
+                            - util: PrimaryIntGen
+                              params: [ 1, 1000000 ]
+                            - util: RandomNoWithDecimalPoints
+                              params: [ 1, 1000000, 2 ]
+                            - util: RandomNoWithDecimalPoints
+                              params: [ 1, 1000000, 2 ]
+                            - util: RandomNoWithDecimalPoints
+                              params: [ 1, 1000000, 5 ]
+                            - util: RandomNoWithDecimalPoints
+                              params: [ 1, 1000000, 5 ]
+                            - util: RandomBoolean
+                            - util: PrimaryStringGen
+                              params: [1, 10]
+                            - util: PrimaryStringGen
+                              params: [1, 100]
+                            - util: PrimaryStringGen
+                              params: [1, 100]
+                            - util: PrimaryStringGen
+                              params: [1, 500]
 
             - workload: UG4_4_update_constraint_tbl1
               run:
